force-app/main/default/objects/Unit__c/Unit__c.object-meta.xml
<CustomObject>
    <label>Unit</label>
    <nameField>
        <displayFormat>U-{00000}</displayFormat>
        <label>Unit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Units</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>