force-app/main/default/objects/Unit__c/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <formula>IF(Account__r.IsPersonAccount, Account__r.PersonContact.Email, Account__r.Company_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Email</label>
    <type>Text</type>
</CustomField>