force-app/main/default/objects/Unit__c/fields/Amount_in_Words_GEL__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Words_GEL__c</fullName>
    <label>Amount in Words - GEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>