force-app/main/default/objects/Unit__c/fields/Amount_in_Words_USD__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Words_USD__c</fullName>
    <label>Amount in Words - USD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>