force-app/main/default/objects/Unit__c/fields/Amount_RUB__c.field-meta.xml
<CustomField>
    <fullName>Amount_RUB__c</fullName>
    <formula>IF( Project_Name_F__c = &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;, Cost_CHF_Number__c * Project__r.CHF_To_RUB__c, Cost_AED__c * CURRENCYRATE(&apos;RUB&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount RUB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>