force-app/main/default/objects/Unit__c/fields/Balcony_Size__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Size__c</fullName>
    <label>Balcony Size</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>