force-app/main/default/objects/Unit__c/fields/Balcony_Size_Square_Meter__c.field-meta.xml
<CustomField>
    <fullName>Balcony_Size_Square_Meter__c</fullName>
    <label>Balcony Size Sq M.</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>