force-app/main/default/objects/Unit__c/fields/Blocked_Filling_in__c.field-meta.xml
<CustomField>
    <fullName>Blocked_Filling_in__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blocked - Filling in</label>
    <type>Checkbox</type>
</CustomField>