force-app/main/default/objects/Unit__c/fields/Booked_At_Date__c.field-meta.xml
<CustomField>
    <fullName>Booked_At_Date__c</fullName>
    <formula>DATEVALUE( Booking_Date_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked At Date</label>
    <type>Date</type>
</CustomField>