force-app/main/default/objects/Unit__c/fields/BookedReservedSold_Value__c.field-meta.xml
<CustomField>
    <fullName>BookedReservedSold_Value__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status__c, &quot;Booked&quot;),
        ISPICKVAL(Status__c, &quot;Reserved&quot;),
        ISPICKVAL(Status__c, &quot;Sold&quot;)
    ),
    IF(Project_Name_F__c &lt;&gt; &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;, Cost_AED__c, Cost_CHF_Number__c), 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BookedReservedSold Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>