force-app/main/default/objects/Unit__c/fields/Booking_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_Time__c</fullName>
    <label>Booked At</label>
    <type>DateTime</type>
</CustomField>