force-app/main/default/objects/Unit__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <label>Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>