force-app/main/default/objects/Unit__c/fields/Cash_Flow_Updated__c.field-meta.xml
<CustomField>
    <fullName>Cash_Flow_Updated__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cash Flow Updated</label>
    <type>Checkbox</type>
</CustomField>