force-app/main/default/objects/Unit__c/fields/Collection_Flag_Date__c.field-meta.xml
<CustomField>
    <fullName>Collection_Flag_Date__c</fullName>
    <description>Finance Center: when Collection_Flag__c was set.</description>
    <label>Collection Flag Date</label>
    <type>Date</type>
</CustomField>