force-app/main/default/objects/Unit__c/fields/Community_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Community_Arabic__c</fullName>
    <formula>Project__r.Community_Arabic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Arabic</label>
    <type>Text</type>
</CustomField>