force-app/main/default/objects/Unit__c/fields/Completion_Date_Update_Sent__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Update_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completion Date Update Sent</label>
    <type>Checkbox</type>
</CustomField>