force-app/main/default/objects/Unit__c/fields/Cost_CHF_Number__c.field-meta.xml
<CustomField>
    <fullName>Cost_CHF_Number__c</fullName>
    <label>Cost (CHF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>