force-app/main/default/objects/Unit__c/fields/Cost_GEL__c.field-meta.xml
<CustomField>
    <fullName>Cost_GEL__c</fullName>
    <formula>Cost_USD_Number__c * Project__r.USD_to_GEL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cost GEL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>