force-app/main/default/objects/Unit__c/fields/Cost_per_square_foot_AED__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_square_foot_AED__c</fullName>
    <label>Cost per Square Foot (AED)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>