force-app/main/default/objects/Unit__c/fields/Cost_per_Square_Meter_AED__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Square_Meter_AED__c</fullName>
    <label>Cost per Square Meter (AED)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>