force-app/main/default/objects/Unit__c/fields/Cost_USD__c.field-meta.xml
<CustomField>
    <fullName>Cost_USD__c</fullName>
    <label>Cost (USD) - Hidden</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>