force-app/main/default/objects/Unit__c/fields/Cost_USD_Number__c.field-meta.xml
<CustomField>
    <fullName>Cost_USD_Number__c</fullName>
    <label>Cost (USD)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>