force-app/main/default/objects/Unit__c/fields/Count_Percent_Tower_A__c.field-meta.xml
<CustomField>
    <fullName>Count_Percent_Tower_A__c</fullName>
    <formula>Project__r.Count_Perc_Booked_Reserved_Sold_Tower_A__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Count Tower A</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>