force-app/main/default/objects/Unit__c/fields/DLD_Fee_Percentage__c.field-meta.xml
<CustomField>
    <fullName>DLD_Fee_Percentage__c</fullName>
    <label>DLD Fee Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fully paid by the Purchaser</fullName>
            </value>
            <value>
                <fullName>Fully paid by the Seller</fullName>
            </value>
            <value>
                <fullName>50% payable by Purchaser, 50% payable by Seller, Purchaser pays all administration fees</fullName>
            </value>
            <value>
                <fullName>25% payable by Purchaser, 75% payable by Seller, Purchaser pays all administration fees</fullName>
            </value>
            <value>
                <fullName>75% payable by Purchaser, 25% payable by Seller, Purchaser pays all administration fees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>