force-app/main/default/objects/Unit__c/fields/Eligible_for_Comission__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Comission__c</fullName>
    <formula>BLANKVALUE(Total_Received_Amount__c,0) &gt;= BLANKVALUE(Cost_AED__c, 0 ) * 0.20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Comission</label>
    <type>Checkbox</type>
</CustomField>