force-app/main/default/objects/Unit__c/fields/Engine_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Engine_Enabled__c</fullName>
    <label>Engine Enabled</label>
    <description>Formula mirror of Financial_Engine_Settings__c.Engine_Owns_Totals__c (the master switch). Used by Lightning page component/action visibility to hide the finance surface when the engine is off. Read-only; do not edit.</description>
    <formula>$Setup.Financial_Engine_Settings__c.Engine_Owns_Totals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <type>Checkbox</type>
</CustomField>