force-app/main/default/objects/Unit__c/fields/Floor_Text__c.field-meta.xml
<CustomField>
    <fullName>Floor_Text__c</fullName>
    <label>Floor Text</label>
    <length>50</length>
    <type>Text</type>
</CustomField>