force-app/main/default/objects/Unit__c/fields/Is_20_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_20_Paid__c</fullName>
    <formula>ROUND((Received_Installments_Amount__c / Cost_AED__c) * 100, 0) &gt;= 20</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 20% Paid</label>
    <type>Checkbox</type>
</CustomField>