force-app/main/default/objects/Unit__c/fields/Is_VAT_Applicable__c.field-meta.xml
<CustomField>
    <fullName>Is_VAT_Applicable__c</fullName>
    <formula>Project__r.Is_VAT_Applicable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is VAT Applicable</label>
    <type>Checkbox</type>
</CustomField>