force-app/main/default/objects/Unit__c/fields/Living_Space__c.field-meta.xml
<CustomField>
    <fullName>Living_Space__c</fullName>
    <label>Internal BUA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>