force-app/main/default/objects/Unit__c/fields/Living_Space_Square_Meter__c.field-meta.xml
<CustomField>
    <fullName>Living_Space_Square_Meter__c</fullName>
    <label>Internal BUA Sq M.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>