force-app/main/default/objects/Unit__c/fields/Missed_Instalments__c.field-meta.xml
<CustomField>
    <fullName>Missed_Instalments__c</fullName>
    <description>Finance Center: count of due-but-unpaid INSTALMENT cash flows (registration items excluded). Written ONLY by FinanceCollectionStateService (event-driven Queueable + nightly FinanceCollectionStateBatch). Read-only for everything else.</description>
    <label>Missed Instalments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>