force-app/main/default/objects/Unit__c/fields/Number_of_Units_on_Project__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Units_on_Project__c</fullName>
    <formula>Project__r.Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Units on Project</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>