force-app/main/default/objects/Unit__c/fields/Paid_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Paid_Percentage__c</fullName>
    <formula>IF(
  Cost_AED__c &gt; 0,
  ROUND(Received_Installments_Amount__c / Cost_AED__c, 2),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>