force-app/main/default/objects/Unit__c/fields/Panorama_Link__c.field-meta.xml
<CustomField>
    <fullName>Panorama_Link__c</fullName>
    <label>Panorama (Link)</label>
    <type>Url</type>
</CustomField>