force-app/main/default/objects/Unit__c/fields/Payment_Plan_Title__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Title__c</fullName>
    <formula>Project__r.Payment_Plan_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Plan Title</label>
    <type>Text</type>
</CustomField>