force-app/main/default/objects/Unit__c/fields/Payment_Plans_Collector__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plans_Collector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plans Collector</label>
    <referenceTo>Payment_Plans_Collector__c</referenceTo>
    <relationshipLabel>Units</relationshipLabel>
    <relationshipName>Units</relationshipName>
    <type>Lookup</type>
</CustomField>