force-app/main/default/objects/Unit__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>IF(Project_Name_F__c &lt;&gt; &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;, &apos;AED &apos;&amp;TEXT(Cost_AED__c), &apos;CHF &apos;&amp;TEXT(Cost_CHF__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price</label>
    <type>Text</type>
</CustomField>