force-app/main/default/objects/Unit__c/fields/Project_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Text__c</fullName>
    <label>Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>