force-app/main/default/objects/Unit__c/fields/Project_Name_Text_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Text_Arabic__c</fullName>
    <label>Project Name Text Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>