force-app/main/default/objects/Unit__c/fields/Project_Published__c.field-meta.xml
<CustomField>
    <fullName>Project_Published__c</fullName>
    <formula>TEXT(Project__r.Publish_Project__c )=&apos;Published&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Published?</label>
    <type>Checkbox</type>
</CustomField>