force-app/main/default/objects/Unit__c/fields/Received_Installments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Received_Installments_Amount__c</fullName>
    <formula>IF(TEXT(DLD_Fee_Percentage__c) &lt;&gt; &apos;Fully paid by the Seller&apos;,
   IF(Total_Received_Amount__c - Oqood_DLD_Fee_Amount__c &lt; 0, 0, Total_Received_Amount__c - Oqood_DLD_Fee_Amount__c),
   Total_Received_Amount__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Installments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>