force-app/main/default/objects/Unit__c/fields/Received_Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Received_Project_Value__c</fullName>
    <formula>Received_Installments_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Received Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>