force-app/main/default/objects/Unit__c/fields/Relevant_Year__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Year__c</fullName>
    <formula>/* Returns all years from Booked, Reserved, Sold dates as text */
TRIM(
    IF(NOT(ISBLANK( Booking_Date_Time__c )), TEXT(YEAR( Booked_At_Date__c )) &amp; &quot; &quot;, &quot;&quot;) &amp;
    IF(NOT(ISBLANK( Reserved_Date_Time__c )), TEXT(YEAR( Reserved_At_Date__c )) &amp; &quot; &quot;, &quot;&quot;) &amp;
    IF(NOT(ISBLANK( Sold_Date_Time__c )), TEXT(YEAR( Sold_At_Date__c )), &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relevant Year</label>
    <type>Text</type>
</CustomField>