force-app/main/default/objects/Unit__c/fields/Report_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Display_Name__c</fullName>
    <formula>Project_Name_F__c &amp;&quot; - &quot;&amp; Building__c &amp;&quot; &quot;&amp; Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>