force-app/main/default/objects/Unit__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&apos;Draft&apos;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <color>#CC0000</color>
                <default>true</default>
                <label>Blocked</label>
            </value>
            <value>
                <fullName>On Approval</fullName>
                <color>#FF0000</color>
                <label>On Approval</label>
            </value>
            <value>
                <fullName>Published</fullName>
                <color>#FF6666</color>
                <label>Available</label>
            </value>
            <value>
                <fullName>Booked</fullName>
                <color>#3333FF</color>
                <label>Booked</label>
            </value>
            <value>
                <fullName>Reserved</fullName>
                <color>#F3D904</color>
                <label>Reserved</label>
            </value>
            <value>
                <fullName>Sold</fullName>
                <color>#419249</color>
                <label>Sold</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>