force-app/main/default/objects/Unit__c/fields/Structure__c.field-meta.xml
<CustomField>
    <fullName>Structure__c</fullName>
    <label>Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Studio</fullName>
            </value>
            <value>
                <fullName>Standard 1BD</fullName>
            </value>
            <value>
                <fullName>Standard 2BD</fullName>
            </value>
            <value>
                <fullName>Not a Typical Studio</fullName>
            </value>
            <value>
                <fullName>Not a Typical 1BD</fullName>
            </value>
            <value>
                <fullName>Not a Typical 2BD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>