force-app/main/default/objects/Unit__c/fields/Title_Number__c.field-meta.xml
<CustomField>
    <fullName>Title_Number__c</fullName>
    <formula>VALUE(Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>