force-app/main/default/objects/Unit__c/fields/Total_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Area__c</fullName>
    <label>Total BUA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>