force-app/main/default/objects/Unit__c/fields/Total_Area_Square_Meter__c.field-meta.xml
<CustomField>
    <fullName>Total_Area_Square_Meter__c</fullName>
    <label>Total Area Sq M.</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>