force-app/main/default/objects/Unit__c/fields/Total_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Total_in_Arabic__c</fullName>
    <label>Total in Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>