force-app/main/default/objects/Unit__c/fields/Total_VAT_on_Unit__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT_on_Unit__c</fullName>
    <label>Total VAT on Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>