force-app/main/default/objects/Unit__c/fields/Total_VAT_Received__c.field-meta.xml
<CustomField>
    <fullName>Total_VAT_Received__c</fullName>
    <label>Total VAT Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>