force-app/main/default/objects/Unit__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <label>Tower</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>Tower 1</fullName>
            </value>
            <value>
                <fullName>Tower 2</fullName>
            </value>
            <value>
                <fullName>Tower 3</fullName>
            </value>
            <value>
                <fullName>Tower 4</fullName>
            </value>
            <value>
                <fullName>Tower 5</fullName>
            </value>
            <value>
                <fullName>Tower 6</fullName>
            </value>
            <value>
                <fullName>Tower 7</fullName>
            </value>
            <value>
                <fullName>Tower 8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>