force-app/main/default/objects/Unit__c/fields/Unit_Cost_Number__c.field-meta.xml
<CustomField>
    <fullName>Unit_Cost_Number__c</fullName>
    <formula>CASE(TEXT(Project__r.Project_Currency__c),
&quot;AED&quot;, Cost_AED__c,
&quot;USD&quot;, Cost_USD__c,
&quot;CHF&quot;, Cost_CHF__c,
Cost_AED__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Cost Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>