force-app/main/default/objects/Unit__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>IF(Project_Name_F__c = &apos;POST HOTEL &amp; RESIDENCES By ELIE SAAB&apos;, Cost_CHF__c, Cost_AED__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>