force-app/main/default/objects/Unit__c/fields/Unit_Price_Received_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Received_Amount__c</fullName>
    <formula>IF(
    NOT(ISBLANK( Received_Installments_Amount__c )),
    TEXT(Unit_Price__c) &amp; &quot; - &quot; &amp; TEXT(Received_Installments_Amount__c),
    TEXT(Unit_Price__c) &amp; &quot; - &quot; &amp; TEXT(0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price - Received Amount</label>
    <type>Text</type>
</CustomField>