force-app/main/default/objects/Unit__c/validationRules/New_Unit_must_be_BLocked_first.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Unit_must_be_BLocked_first</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp;  TEXT(Status__c) &lt;&gt;&apos;Draft&apos;</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>New Units must be created in the Blocked status, then you can change it.</errorMessage>
</ValidationRule>