force-app/main/default/objects/Unit__c/listViews/Gianfranco_Ferre_Residences.listView-meta.xml
<ListView>
    <fullName>Gianfranco_Ferre_Residences</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Balcony_Size__c</columns>
    <columns>Cost_CHF__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>Number_of_Bedrooms__c</columns>
    <columns>Unit_Model__c</columns>
    <columns>Cost_AED__c</columns>
    <columns>Total_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name_F__c</field>
        <operation>equals</operation>
        <value>GIANFRANCO FERRE RESIDENCES</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft,Published</value>
    </filters>
    <label>Gianfranco Ferre Residences</label>
    <sharedTo>
        <role>Sales_Admin</role>
        <role>Sales_Director_1</role>
        <role>Sales_Director_2</role>
        <role>Sales_Manager</role>
        <role>Sales_Manager_Team_Aiham</role>
    </sharedTo>
</ListView>