force-app/main/default/objects/Unit__c/listViews/Trussardi_Residences_2_Offices.listView-meta.xml
<ListView>
    <fullName>Trussardi_Residences_2_Offices</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Property_Code__c</columns>
    <columns>Property_Code_Text__c</columns>
    <columns>Balcony_Size__c</columns>
    <columns>Cost_CHF__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Project__c</columns>
    <columns>Number_of_Bedrooms__c</columns>
    <columns>Unit_Model__c</columns>
    <columns>Cost_AED__c</columns>
    <columns>Total_Area__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Name_F__c</field>
        <operation>equals</operation>
        <value>Trussardi Residences 2 Offices</value>
    </filters>
    <label>Trussardi Residences 2 Offices</label>
</ListView>